# dwarftesting_framework_turorial

./: CMakeLists.txt  README.md  live_docs.sh.in  mkdocs.yml  mkdocs.yml.in  set-tmux.sh  todo.md
cmake/: MkDocs2PandocConfig.cmake  MkDocsConfig.cmake  PandocConfig.cmake  XeLaTeXConfig.cmake
docs/: 3-1-git-flow.md  cmake.md  debuging.md  git-flow.md  grid-tools.md  misc.md  openproject.md  slack.md
mkdocs/: mkdocs.yml  mkdocs.yml.in
mkdocs/docs/: 0-1-start.md  0-2-pull.md  0-3-edit.md  0-4-push.md  0-start.md  2-1-serialbox.md  2-2-dwarfs.md  4-1-cmake.md  4-3-jenkins.md  4-4-git.md  4-4-misc.md  4-5-puppet.md  4-6-eclipse.md  cmake.md  get_boost.sh  index.md
presentations/: Meeting agenda 29X2018, Zürich, MetoSwiss.cpp
